force-app/main/default/objects/FeeSchedule__c/FeeSchedule__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT062818 - Created for phase1</description>
    <label>Fee Schedule</label>
    <nameField>
        <label>Fee Schedule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>