force-app/main/default/objects/FeeSchedule__c/fields/BeginningDate__c.field-meta.xml
<CustomField>
    <fullName>BeginningDate__c</fullName>
    <description>PacPoint-FT062818 - Created for phase 1</description>
    <label>Beginning Date</label>
    <type>Date</type>
</CustomField>