force-app/main/default/objects/FeeSchedule__c/fields/CarahsoftFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>CarahsoftFeeAmount__c</fullName>
    <description>PacPoint-FT062818 - Created for phase 1</description>
    <label>Carahsoft Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>