force-app/main/default/objects/FeeSchedule__c/fields/CarahsoftFeePercent__c.field-meta.xml
<CustomField>
    <fullName>CarahsoftFeePercent__c</fullName>
    <description>PacPoint-FT062818 - Created for phase 1</description>
    <label>Carahsoft Fee %</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>