force-app/main/default/objects/FeeSchedule__c/fields/CreditCardFee__c.field-meta.xml
<CustomField>
    <fullName>CreditCardFee__c</fullName>
    <description>PacPoint-FT070118 - Created for phase 1</description>
    <label>Credit Card Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>