force-app/main/default/objects/FeeSchedule__c/fields/CreditCardPaymentFeesWithheld__c.field-meta.xml
<CustomField>
    <fullName>CreditCardPaymentFeesWithheld__c</fullName>
    <label>Credit Card Payment Fees Withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>