force-app/main/default/objects/FeeSchedule__c/fields/EndingDate__c.field-meta.xml
<CustomField>
    <fullName>EndingDate__c</fullName>
    <description>PacPoint-FT062818 - Created for phase 1</description>
    <label>Ending Date</label>
    <type>Date</type>
</CustomField>