force-app/main/default/objects/FeeSchedule__c/fields/HardwareFees__c.field-meta.xml
<CustomField>
    <fullName>HardwareFees__c</fullName>
    <description>PacPoint-FT063018 - Created for phase 1</description>
    <label>Hardware Fees</label>
    <summarizedField>HardwareFees__c.Amount__c</summarizedField>
    <summaryForeignKey>HardwareFees__c.FeeSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>