force-app/main/default/objects/FeeSchedule__c/fields/MaximumPPIFees__c.field-meta.xml
<CustomField>
    <fullName>MaximumPPIFees__c</fullName>
    <description>PacPoint-FT062818 - Created for phase 1</description>
    <label>Maximum PPI Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>