force-app/main/default/objects/FeeSchedule__c/fields/MinimumPPIFees__c.field-meta.xml
<CustomField>
    <fullName>MinimumPPIFees__c</fullName>
    <description>PacPoint-FT062818 - Created for phase 1</description>
    <label>Minimum PPI Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>