force-app/main/default/objects/FeeSchedule__c/fields/NetAmountOwedtoPPI__c.field-meta.xml
<CustomField>
    <fullName>NetAmountOwedtoPPI__c</fullName>
    <formula>TotalAmountOwedtoPPI__c - CreditCardPaymentFeesWithheld__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount Owed to PPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>