force-app/main/default/objects/FeeSchedule__c/fields/RemitToDCCA__c.field-meta.xml
<CustomField>
    <fullName>RemitToDCCA__c</fullName>
    <description>PacPoint-FT070118 - Created for phase 1</description>
    <label>Remit to DCCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>