force-app/main/default/objects/FeeSchedule__c/fields/ServicesFees__c.field-meta.xml
<CustomField>
    <fullName>ServicesFees__c</fullName>
    <description>PacPoint-FT063018 - Created for phase 1</description>
    <label>Services Fees</label>
    <summarizedField>ServicesFees__c.Amount__c</summarizedField>
    <summaryForeignKey>ServicesFees__c.FeeSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>