force-app/main/default/objects/FeeSchedule__c/fields/SoftwareLicenseFees__c.field-meta.xml
<CustomField>
    <fullName>SoftwareLicenseFees__c</fullName>
    <description>PacPoint-FT063018 - Created for phase 1</description>
    <label>Software License Fees</label>
    <summarizedField>SoftwareFees__c.Amount__c</summarizedField>
    <summaryForeignKey>SoftwareFees__c.FeeSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>