force-app/main/default/objects/FeeSchedule__c/fields/TotalAmountOwedtoPPI__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOwedtoPPI__c</fullName>
    <formula>PPIFeeAmount__c + HIGETaxAmount__c + TransactionFee__c + ServicesFees__c + HardwareFees__c + SoftwareLicenseFees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Owed to PPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>