force-app/main/default/objects/FeeSchedule__c/fields/TotalCollections__c.field-meta.xml
<CustomField>
    <fullName>TotalCollections__c</fullName>
    <description>PacPoint-FT062818 - Created for phase 1</description>
    <label>Total Collections</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>