force-app/main/default/objects/FeeSchedule__c/fields/TotalPPIMaximum__c.field-meta.xml
<CustomField>
    <fullName>TotalPPIMaximum__c</fullName>
    <description>PacPoint-FT063018 - Created for phase 1</description>
    <formula>MaximumPPIFees__c + SoftwareLicenseFees__c + HardwareFees__c + ServicesFees__c + HIGETaxAmount__c + TransactionFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PPI Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>