force-app/main/default/objects/FeeSchedule__c/fields/TotalPPIMinimum__c.field-meta.xml
<CustomField>
    <fullName>TotalPPIMinimum__c</fullName>
    <description>PacPoint-FT063018 - Created for phase 1</description>
    <formula>MinimumPPIFees__c  +  SoftwareLicenseFees__c  +  HardwareFees__c  +  ServicesFees__c + HIGETaxAmount__c + TransactionFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PPI Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>