force-app/main/default/objects/FeeSchedule__c/listViews/All_Fee_Schedules.listView-meta.xml
<ListView>
    <fullName>All_Fee_Schedules</fullName>
    <columns>NAME</columns>
    <columns>BeginningDate__c</columns>
    <columns>EndingDate__c</columns>
    <columns>Status__c</columns>
    <columns>MaximumPPIFees__c</columns>
    <columns>PPIFeePercent__c</columns>
    <columns>HIGETaxPercent__c</columns>
    <columns>TotalPPIMinimum__c</columns>
    <columns>TotalPPIMaximum__c</columns>
    <columns>TotalAmountOwedtoPPI__c</columns>
    <columns>PPIFeeAmount__c</columns>
    <columns>TransactionFee__c</columns>
    <columns>TotalCollections__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fee Schedules</label>
</ListView>